Segundo salvamento de projeto de teste em 01/09/2023

--- a/subpage.html
+++ b/subpage.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Again</h1>
+    <h1>Is anyone home?</h1>
     <a href="main.html">Volte à página principal</a>
 </body>
 </html>
