Terceiro salvamento de projeto de teste em 01/09/2023

--- a/subpage2.html
+++ b/subpage2.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Hello</h1>
-    <a href="subpage.html">Vá para a subpágina</a>
-    <a href="subpage2.html">Vá para a subpágina2</a>
+    <h1>Just pick up the phone</h1>
+    <a href="main.html">Volte à página principal</a>
 </body>
 </html>
